--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,4 @@ serde_json = "1.0"
 
 tokio = { version = "1", features = ["full"] }
 
-chessboard = { path = "../chessboard" }
+chessboard = { git = "https://github.com/kyllingene/chessboard" }
