--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,6 @@ serde = "1.0"
 serde_json = "1.0"
 
 tokio = { version = "1", features = ["full"] }
+async_stream = "0.3"
 
 chessboard = { git = "https://github.com/kyllingene/chessboard" }
