--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,17 @@
 [package]
 name = "liclient"
-version = "0.1.0"
+version = "0.2.1"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 reqwest = { version = "0.11", features = ["stream"] }
+reqwest-streams = { version = "0.2.0", features = ["json"] }
+futures-util = "0.3"
 
 serde = "1.0"
 serde_json = "1.0"
 
-tokio = { version = "1", features = ["full"] }
 
 chessboard = { git = "https://github.com/kyllingene/chessboard" }
