--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,12 @@ edition = "2021"
 
 [dependencies]
 reqwest = { version = "0.11", features = ["stream"] }
-reqwest-streams = { version = "0.2.0", features = ["json"] }
 futures-util = "0.3"
+
+async-stream = "0.3"
 
 serde = "1.0"
 serde_json = "1.0"
-
+bytes = "^1.0"
 
 chessboard = { git = "https://github.com/kyllingene/chessboard" }
