--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,12 @@ edition = "2021"
 
 [dependencies]
 reqwest = { version = "0.11", features = ["stream"] }
+futures = "0.3"
 futures-util = "0.3"
 
-async-stream = "0.3"
+tokio = { version = "1.21", features = ["full"] }
+tokio-util = { version = "0.7", features = ["io"] }
+tokio-stream = { version = "0.1", features = ["io-util"]}
 
 serde = "1.0"
 serde_json = "1.0"
